tests/error/errors_on_usage/if_different_types.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: bool) -> int:
    if x:
        y = 1
    else:
        y = False
    return y
