tests/error/errors_on_usage/if_different_types.err
Error: Different types (at $FILE:10:11)
   | 
 8 |     else:
 9 |         y = False
10 |     return y
   |            ^ Variable `y` may refer to different types
   | 
 7 |         y = 1
   |         - This is of type `int`
   | 
 9 |         y = False
   |         - This is of type `bool`

Guppy compilation failed due to 1 previous error
